--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
     "@graphql-codegen/typescript": "^1.13.4",
     "@graphql-codegen/typescript-resolvers": "^1.13.4",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/pg": "^7.14.3",
     "dotenv-flow": "^3.1.0",
     "ts-node-dev": "^1.0.0-pre.44",
