--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fsgb/common": "1.0.0",
     "apollo-server": "^2.12.0",
+    "bcrypt": "^4.0.1",
     "dotenv-flow": "^3.1.0",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
@@ -22,6 +23,7 @@
     "@graphql-codegen/introspection": "^1.13.4",
     "@graphql-codegen/typescript": "^1.13.4",
     "@graphql-codegen/typescript-resolvers": "^1.13.4",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/pg": "^7.14.3",
