--- a/packages/server/sample.env
+++ b/packages/server/sample.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgres://<username>:<password>@<host>:<port>/<database>
+TOKEN_SECRET=secretcode
+REFRESH_SECRET=supersecretcode
+SUPER_USER_ID=1
