--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "dotenv-flow": "^3.1.0",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
+    "html2json": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.8",
     "pg": "^8.0.3"
@@ -24,6 +25,7 @@
     "@graphql-codegen/typescript": "^1.13.4",
     "@graphql-codegen/typescript-resolvers": "^1.13.4",
     "@types/bcrypt": "^3.0.0",
+    "@types/dotenv-flow": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/pg": "^7.14.3",
