--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,8 @@
     "html2json": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.8",
-    "pg": "^8.0.3"
+    "pg": "^8.0.3",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^1.13.4",
